--- a/docs/cms_config.ini
+++ b/docs/cms_config.ini
@@ -1,7 +1,7 @@
 # below are the server-wide settings for documentation
 [help_settings]
-url_base = http://edx.readthedocs.org/projects/edx-partner-course-staff
-version = latest
+url_base = #
+version = 
 
 
 # below are the pdf settings for the pdf file
@@ -14,36 +14,36 @@ pdf_file = edx-partner-course-staff.pdf
 # NOTE: If any of these page settings change, then their corresponding test should be updated
 #       in edx-platform/cms/djangoapps/contentstore/features/help.feature
 [pages]
-default = index.html
-home = getting_started/get_started.html
-outline = developing_course/course_outline.html
-unit = developing_course/course_units.html
-updates = course_assets/handouts_updates.html
-pages = course_assets/pages.html
-files = course_assets/course_files.html
-textbooks = course_assets/textbooks.html
-schedule = set_up_course/setting_up_student_view.html
-grading = grading/index.html
-team_course = set_up_course/course_staffing.html#add-course-team-members
-team_library = course_components/libraries.html#give-other-users-access-to-your-library
-advanced = index.html
-checklist = set_up_course/creating_new_course.html#use-the-course-checklist
-import_library = course_components/libraries.html#import-a-library
-import_course = releasing_course/export_import_course.html#import-a-course
-export_library = course_components/libraries.html#export-a-library
-export_course = releasing_course/export_import_course.html#export-a-course
-welcome = getting_started/get_started.html
-login = getting_started/get_started.html
-register = getting_started/get_started.html
-content_libraries = course_components/libraries.html
-content_groups = course_features/cohorts/cohorted_courseware.html
-group_configurations = course_features/content_experiments/content_experiments_configure.html#set-up-group-configurations-in-edx-studio
-container = developing_course/course_components.html#components-that-contain-other-components
-video = video/video_uploads.html
-certificates = set_up_course/creating_course_certificates.html
+default = 
+home = 
+outline = 
+unit = 
+updates = 
+pages = 
+files = 
+textbooks = 
+schedule = 
+grading = 
+team_course = 
+team_library = 
+advanced = 
+checklist = 
+import_library = 
+import_course = 
+export_library = 
+export_course = 
+welcome = 
+login = 
+register = 
+content_libraries = 
+content_groups = 
+group_configurations = 
+container = 
+video = 
+certificates = 
 
 # below are the language directory names for the different locales
 [locales]
-default = en
-en = en
-en_us = en
+default = 
+en = 
+en_us = 
